# embeddings-based-code-search-engine

./: .gitignore  api.py  build_index.py  documents.npy  index.faiss  pyproject.toml  readme.md  report.ipynb  requirements.txt  search.py
data/: __init__.py  cosqa.ipynb  cosqa_dataset.py  cosqa_module.py
embeddings/: __init__.py  embeddings.ipynb  search_engine.py
evaluation/: __init__.py  evaluation.py  evaluator_callback.py
fine_tuning/: __init__.py  code_search_model.py  tuner.py
report/: plot_training.py  train_loss_epoch.csv  train_loss_step.csv  val_loss.csv  val_mrr.csv  val_ndcg.csv  val_recall.csv
