[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "code-search-engine"
version = "0.1.0"
description = "Embeddings-based code search engine with fine-tuning on CoSQA"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "pytorch-lightning>=2.0",
    "transformers>=4.30",
    "sentence-transformers>=2.2",
    "datasets>=2.14",
    "torchmetrics>=1.0",
    "faiss-cpu>=1.7",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "wandb>=0.15",
    "tensorboard>=2.14",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "jupyterlab",
    "ipykernel",
    "matplotlib",
    "seaborn",
    "httpx",
]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
]

[project.scripts]
code-search = "search:main"
code-search-api = "api:app"

[tool.setuptools.packages.find]
include = ["data*", "embeddings*", "evaluation*", "fine_tuning*"]
